inlcude theme defaults & sigil

--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "Daniel-N-Huss.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: Daniel_N_Huss
 github_username:  Daniel-N-Huss
+sigil: /assets/sigil.png
 
 # Build settings
 theme: minima
